implemented dashboard and update functionalities
